cabal-version:       2.4
name:                co-log-concurrent
version:             0.4.0.0
synopsis:            Asynchronous backend for co-log library
description:         Buiding block for writing asynchronous logger pipelines.
homepage:            https://github.com/qnikst/co-log
bug-reports:         https://github.com/qnikst/co-log-concurrent/issues
license:             MPL-2.0
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
copyright:           2018-2020 Kowainik, 2020 - Alexander Vershilov
category:            Logging, Contravariant, Comonad
stability:           provisional
build-type:          Simple
extra-source-files:  CHANGELOG.markdown
                     README.markdown

source-repository head
  type:                git
  location:            https://github.com/qnikst/co-log-concurrent.git

common common-options
  build-depends:       base >= 4.10.1.0 && < 4.14

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors
                       -Wpartial-fields
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DerivingStrategies
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Colog.Concurrent
                       Colog.Concurrent.Internal

  build-depends:       co-log-core ^>= 0.2.1.0
                     -- , containers >= 0.5.7 && < 0.7
                     -- , contravariant ^>= 1.5
                     -- , directory ^>= 1.3.0
                     -- , filepath ^>= 1.4.1
                     -- , mtl ^>= 2.2.2
                     , stm >= 2.4 && < 2.6
                     -- , text ^>= 1.2.3
                     -- , chronos ^>= 1.1
                     -- , transformers ^>= 0.5
                     -- , typerep-map ^>= 0.3.2
                     -- , vector ^>= 0.12.0.3
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DerivingStrategies
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

